RESOLVED FIXED33584
[V8] Slow named property lookup on DOMWindow because of missing fast case
https://bugs.webkit.org/show_bug.cgi?id=33584
Summary [V8] Slow named property lookup on DOMWindow because of missing fast case
Mads Ager
Reported 2010-01-13 02:34:38 PST
In the V8 named getter on DOMWindow objects, we always search the DOM using namedItems(propertyName) on the document. We should check that the document is an HTMLDocument and use fast checks to determine if elements with that name exists before searching the DOM for all occurrences. See http://crbug.com/32040 for an example where this hits us.
Attachments
Add fast case checks to V8 named getter on DOMWindow objects. (2.22 KB, patch)
2010-01-13 02:42 PST, Mads Ager
no flags
Mads Ager
Comment 1 2010-01-13 02:42:53 PST
Created attachment 46442 [details] Add fast case checks to V8 named getter on DOMWindow objects.
Dimitri Glazkov (Google)
Comment 2 2010-01-13 08:27:38 PST
Comment on attachment 46442 [details] Add fast case checks to V8 named getter on DOMWindow objects. looks great!
WebKit Commit Bot
Comment 3 2010-01-13 23:35:08 PST
Comment on attachment 46442 [details] Add fast case checks to V8 named getter on DOMWindow objects. Clearing flags on attachment: 46442 Committed r53241: <http://trac.webkit.org/changeset/53241>
WebKit Commit Bot
Comment 4 2010-01-13 23:35:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.